Fix blog title not wrapping on mobile

--- a/css/content.css
+++ b/css/content.css
@@ -1,3 +1,7 @@
 .article {
     margin-top: 50px;
 }
+
+.article > h1 {
+    white-space: normal;
+}
